--- a/roles/firewall/templates/pf.conf
+++ b/roles/firewall/templates/pf.conf
@@ -10,6 +10,9 @@ pass in proto tcp to port bgp
 # Eingehende ping Pakete erlauben
 pass in proto icmp all
 
+# Eingehenden Verkehr von bestimmten IPs für rclone erlauben
+pass in proto tcp from {{ home_address }} to port 5572
+
 # Gesamten ausgehenden Verkehr erlauben
 # 'keep state' ist bei FreeBSD pf standardmäßig implizit gesetzt.
 pass out all
