Refactor BGP Router Configuration and Update Documentation
- Updated README.md to reflect changes in AS number and routing protocols.
- Added ansible.tar.gz for Ansible role packaging.
- Updated vault.yml with new encrypted values.
- Created index.html for AS201033 policy documentation.
- Implemented BIRD as the routing daemon, replacing FRR.
- Added tasks for BIRD installation and configuration in roles/bird.
- Updated firewall rules to accommodate new routing and tunneling requirements.
- Removed FRR-related tasks and configurations from roles/frr.
- Implemented GRE tunnel configuration in roles/tunnel.
- Added Wireguard installation and configuration in roles/wireguard.
- Updated site.yml to reflect the new role structure and removed deprecated roles.

--- a/roles/firewall/templates/pf.conf
+++ b/roles/firewall/templates/pf.conf
@@ -9,9 +9,18 @@ pass in proto tcp to port bgp
 
 # Eingehende ping Pakete erlauben
 pass in proto icmp all
+pass in proto icmp6 all
 
 # Eingehenden Verkehr von bestimmten IPs für rclone erlauben
 pass in proto tcp from {{ home_address }} to port 5572
+
+# Eingehenden Verkehr von bestimmten IPs für WireGuard erlauben
+pass in proto udp from {{ home_address }} to port 51820
+pass in proto udp from {{ hetzner_address }} to port 51820
+
+# Gesamten Eingehenden Verkehr zu 2a06:9801:5a::/48 erlauben
+pass in proto tcp from any to 2a06:9801:5a::/48
+pass in proto udp from any to 2a06:9801:5a::/48
 
 # Gesamten ausgehenden Verkehr erlauben
 # 'keep state' ist bei FreeBSD pf standardmäßig implizit gesetzt.
